// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse render active 1`] = `
<div>
  <div
    class=" h-fit"
    style="transition: all 1s linear;"
  >
    Collapse
  </div>
</div>
`;

exports[`Collapse render active with class 1`] = `
<div>
  <div
    class="class h-fit"
    style="transition: all 1s linear;"
  >
    Collapse
  </div>
</div>
`;

exports[`Collapse render default 1`] = `
<div>
  <div
    class=" h-0 overflow-hidden"
    style="transition: all 1s linear;"
  >
    Collapse
  </div>
</div>
`;
